--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,90 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>ShopEase | Smart Shopping</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<!-- ===== HEADER ===== -->
-<header>
-  <div style="display:flex;align-items:center;gap:10px">
-    <img src="logo.png" alt="ShopEase Logo">
-    <h2 style="color:#2563eb">ShopEase</h2>
+  <!-- ===== HEADER ===== -->
+  <header>
+    <div style="display:flex;align-items:center;gap:10px">
+      <img src="logo.png" alt="ShopEase Logo">
+      <h2 style="color:#2563eb">ShopEase</h2>
 
-    <!-- Logged-in user name -->
-    <span id="userBox"
-      style="margin-left:15px;color:#16a34a;font-weight:600">
-    </span>
-  </div>
+      <!-- Logged-in user name -->
+      <span id="userBox" style="margin-left:15px;color:#16a34a;font-weight:600">
+      </span>
+    </div>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="product.html">Products</a>
-    <a href="wishlist.html">Wishlist</a>
-    <a href="cart.html">Cart</a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="product.html">Products</a>
+      <a href="wishlist.html">Wishlist</a>
+      <a href="cart.html">Cart</a>
 
-    <!-- Auth links -->
-    <a href="login.html" id="loginLink">Login</a>
-    <a href="signup.html" id="signupLink">Signup</a>
-    <a href="#" id="logoutLink" onclick="logout()" style="display:none">
-      Logout
-    </a>
-  </nav>
-</header>
+      <!-- Auth links -->
+      <a href="login.html" id="loginLink">Login</a>
+      <a href="signup.html" id="signupLink">Signup</a>
+      <a href="#" id="logoutLink" onclick="logout()" style="display:none">
+        Logout
+      </a>
+      <div class="profile-menu" id="profileMenu" style="display:none">
+        <span id="profileName" onclick="toggleDropdown()">👤 User ▾</span>
 
-<!-- ===== HERO SECTION ===== -->
-<section class="hero-home">
-  <h1>Smart Shopping, Better Living</h1>
-  <p>Discover the best gadgets, accessories & electronics at amazing prices</p>
-  <a href="product.html" class="hero-btn">Shop Now</a>
-</section>
+        <div class="dropdown" id="dropdownMenu">
+          <a href="profile.html">Profile</a>
+          <a href="#" onclick="logout()">Logout</a>
+        </div>
+      </div>
 
-<!-- ===== SALE BANNER ===== -->
-<section class="sale-banner">
-  <h2>🔥 Mega Sale is Live!</h2>
-  <p>Up to <span>50% OFF</span> on selected electronics</p>
-  <a href="product.html" class="sale-btn">Explore Deals</a>
-</section>
+    </nav>
+  </header>
 
-<!-- ===== FEATURES ===== -->
-<section class="features">
-  <div class="feature-card">
-    <h3>🚚 Free Delivery</h3>
-    <p>On orders above ₹999</p>
-  </div>
+  <!-- ===== HERO SECTION ===== -->
+  <section class="hero-home">
+    <h1>Smart Shopping, Better Living</h1>
+    <p>Discover the best gadgets, accessories & electronics at amazing prices</p>
+    <a href="product.html" class="hero-btn">Shop Now</a>
+  </section>
 
-  <div class="feature-card">
-    <h3>🔒 Secure Payment</h3>
-    <p>100% safe & trusted</p>
-  </div>
+  <!-- ===== SALE BANNER ===== -->
+  <section class="sale-banner">
+    <h2>🔥 Mega Sale is Live!</h2>
+    <p>Up to <span>50% OFF</span> on selected electronics</p>
+    <a href="product.html" class="sale-btn">Explore Deals</a>
+  </section>
 
-  <div class="feature-card">
-    <h3>⚡ Fast Checkout</h3>
-    <p>Quick & easy purchase</p>
-  </div>
-</section>
+  <!-- ===== FEATURES ===== -->
+  <section class="features">
+    <div class="feature-card">
+      <h3>🚚 Free Delivery</h3>
+      <p>On orders above ₹999</p>
+    </div>
 
-<!-- ===== FOOTER ===== -->
-<footer>
-  <p>© 2026 ShopEase. All Rights Reserved.</p>
-</footer>
+    <div class="feature-card">
+      <h3>🔒 Secure Payment</h3>
+      <p>100% safe & trusted</p>
+    </div>
 
-<!-- ===== AUTH SCRIPT ===== -->
+    <div class="feature-card">
+      <h3>⚡ Fast Checkout</h3>
+      <p>Quick & easy purchase</p>
+    </div>
+  </section>
+
+  <!-- ===== FOOTER ===== -->
+  <footer>
+    <p>© 2026 ShopEase. All Rights Reserved.</p>
+  </footer>
+
+  <!-- ===== AUTH SCRIPT ===== -->
 <script src="auth.js"></script>
 <script>
-  // Check login status
-  if (isLoggedIn()) {
-    const user = getUser();
-    document.getElementById("userBox").innerText = "👤 " + user.name;
+  const userBox = document.getElementById("userBox");
+  const loginLink = document.getElementById("loginLink");
+  const signupLink = document.getElementById("signupLink");
+  const profileMenu = document.getElementById("profileMenu");
+  const profileName = document.getElementById("profileName");
 
-    document.getElementById("loginLink").style.display = "none";
-    document.getElementById("signupLink").style.display = "none";
-    document.getElementById("logoutLink").style.display = "inline";
+  if (isLoggedIn()) {
+    profileMenu.style.display = "inline-block";
+    profileName.innerText = "👤 " + getUserName() + " ▾";
+
+    loginLink.style.display = "none";
+    signupLink.style.display = "none";
+  } else {
+    profileMenu.style.display = "none";
+
+    loginLink.style.display = "inline";
+    signupLink.style.display = "inline";
   }
+
+  // Close dropdown when clicking outside
+  document.addEventListener("click", (e) => {
+    const dropdown = document.getElementById("dropdownMenu");
+    if (!e.target.closest(".profile-menu")) {
+      dropdown.style.display = "none";
+    }
+  });
 </script>
 
+
+
 </body>
+
 </html>
